[project]
name = "kulsh"
version = "2.15.2"
description = "Kulsh GPT - Multifunctional AI bot for Telegram and Discord"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "pyTelegramBotAPI>=4.15.0",
    "discord.py>=2.4.0",
    "PyNaCl>=1.5.0",
    "discord-ext-voice-recv>=0.4.0",
    "SpeechRecognition>=3.10.0",
    "pydub>=0.25.1",
    "edge-tts>=7.0.0",
    "python-socketio>=5.11.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.350",
    "mypy>=1.8.0",
    "types-aiohttp",
    "types-python-dotenv",
    "types-PyNaCl",
]

[tool.pyright]
pythonVersion = "3.10"
include = ["kulsh.py"]
exclude = ["venv/**", ".venv/**"]
typeCheckingMode = "strict"
reportMissingImports = true
# stubPath = "stubs"

[tool.mypy]
python_version = "3.10"
files = ["kulsh.py"]
exclude = ["venv", ".venv"]
# mypy_path = "stubs"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true
strict_equality = true
strict_concatenate = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
